feat: support websocket connection
